# shootr

./: .env.example  .gitattributes  .gitignore  .travis.yml  Cargo.toml  Jenkinsfile  code_of_conduct.md  contributing.md  readme.md
core/: Cargo.toml  readme.md
core/shootr-derive/: Cargo.toml
core/shootr-derive/src/: lib.rs
core/src/: bootstrap.rs  collision.rs  engine.rs  lib.rs  main.rs  model.rs  util.rs
core/src/ecs/: comp.rs  mod.rs  res.rs  sys.rs
core/src/model/: client.rs  comp.rs  game.rs  mod.rs  network.rs
core/src/system/: bounce.rs  delay.rs  despawn.rs  input_handler.rs  mod.rs  physics.rs  sending.rs  spawn.rs
docs/: contributing.md
scripts/: deploy.sh  fmt.sh  start.sh
web/: app.js  package-lock.json  package.json  readme.md
web/client/: .babelrc  README.md  package-lock.json  package.json  readme.md  rollup.config.debug.js  rollup.config.js  tsconfig.json  tslint.json
web/client/public/: index.html
web/client/src/: connection.ts  display.ts  globals.ts  index.ts  input.ts  interpolation.ts  types.ts
web/public/: index.css  index.html  index.js
web/public/assets/: dungeon.json  pong.json
web/server/: app.js  package-lock.json  package.json
