[package]
authors = ["Jan Nils Ferner"]
name = "shootr"
version = "0.2.0"

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"

tokio-core = "0.1"
futures = "0.1"
futures-cpupool = "0.1"

websocket = {version = "0.20", features = ["nightly"]}

specs = "0.9"
chrono = "0.4"
dotenv = "0.10"
maplit = "0.1"
