[package]
authors = ["Jan Nils Ferner"]
name = "shootr"
version = "0.2.0"

[dependencies]
byteorder = "1"
chrono = "0.4"
derive_more = "0.6.0"
dotenv = "0.10"
futures = "0.1"
futures-cpupool = "0.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
specs = "0.9"
tokio-core = "0.1"
uuid = { version = "0.5", features = ["v4", "serde"] }
websocket-server = "0.2"
maplit = "0.1"

[dependencies.shootr-derive]
path = "shootr-derive"

[dependencies.websocket]
features = ["nightly"]
version = "0.20"
